# ntp-checker

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: App.vue  main.rs  main.ts  vite-env.d.ts  winit_helper.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ntpserver.rs
src/components/: Header.vue  LocalTime.vue  NtpChecker.vue  NtpServer.vue  SvgIcon.vue
src/layout/: LayoutIndex.vue
src/style/: index.css  reset.css
ui/: app.slint
