[package]
name = "ntp-checker"
version = "0.1.1"
authors = ["humbinal <humbinal@126.com>"]
edition = "2021"
build = "build.rs"

[profile.release]
lto = true

[dependencies]
slint = { version = "1.8", features = ["software-renderer-systemfonts"] }
i-slint-backend-winit = { version = "1.8.0" }
chrono = { version = "0.4.38" }
rsntp = { version = "4.0.0" }

[build-dependencies]
slint-build = { version = "1.8" }
winresource = { version = "0.1.17" }
