[package]
name = "ntp-tool"
version = "0.1.5"
description = "ntp gui tool"
authors = ["humbinal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.38" }
rsntp = { version = "4.0.0" }
tokio = { version = "1.41.1", features = ["full"] }
tokio-macros = "2.4.0"
byteorder = "1.5.0"
net2 = "0.2.39"
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
